# hafnium-project-reference

./: BUILD.gn
rpi/: BUILD.gn
rpi4/: BUILD.gn
secure_rd_fremont/: BUILD.gn
secure_rd_fremont_cfg1/: BUILD.gn
secure_rd_v3/: BUILD.gn
secure_rd_v3_cfg1/: BUILD.gn
